--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,23 @@
 {
     "configurations": [
         {
-            "name": "C/C++: gcc.exe 生成和调试活动文件",
+            "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
+            "program": "C:\\Windows\\System32\\cmd.exe", // 调试程序的路径
+            "args": [
+                "/c",
+                "${fileDirname}\\output\\${fileBasenameNoExtension}.exe", // 调试程序启动参数
+                "&",
+                "pause"
+            ],
             "stopAtEntry": false,
-            "cwd": "D:\\mingw64\\bin",
+            //"cwd": "D:\\mingw64\\bin",
+            "cwd": "${fileDirname}\\output", // 调试程序的工作目录
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "gdb.exe",
+            "miDebuggerPath": "D:\\mingw64\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "为 gdb 启用整齐打印",
@@ -24,7 +30,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: gcc.exe 生成活动文件"
+            "preLaunchTask": "C/C++: g++.exe build active file"
         }
     ],
     "version": "2.0.0"
