--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,24 +3,24 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: gcc.exe 生成活动文件",
-			"command": "C:\\Users\\16270\\mingw64\\bin\\gcc.exe",
+			"label": "C/C++: gcc.exe build active file",
+			"command": "D:\\mingw64\\bin\\g++.exe",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe",
-				"-fexec-charset=GBK",
+				"${fileDirname}\\output\\${fileBasenameNoExtension}.exe",
+				"-fexec-charset=GBK"
 			],
 			"options": {
-				"cwd": "${fileDirname}"
+				"cwd": "D:/mingw64/bin"
 			},
 			"problemMatcher": [
 				"$gcc"
 			],
 			"group": "build",
-			"detail": "编译器: \"D:\\mingw64\\bin\\gcc.exe\""
+			"detail": "编译器: \"D:\\mingw64\\bin\\g++.exe\""
 		}
 	]
 }
